# oaip

./: pyproject.toml
VD_games/: cli.py
VD_games/engine/: game_engine.py
VD_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_games.py  VD_gcd.py  VD_main.py  brain_calc.py  brain_even.py  vd_prime.py  vd_progression.py
