[project]
name = "games-project-ladkina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
brain-even = "VD_games.scripts.brain_even:main"
brain-calc = "VD_games.scripts.brain_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
vd-progression = "VD_games.scripts.vd_progression:main"
vd-prime = "VD_games.scripts.vd_prime:main"
